Parse settings from profile file; bugfixes

--- a/etc/build.properties
+++ b/etc/build.properties
@@ -25,7 +25,7 @@ javac.debuglevel=lines,vars,source
 javac.maxmem=1050m
 javadoc.maxmem=1050m
 exe4j.home=/opt/exe4j
-package-extra=true
+package-extra=false
 
 artifactory.username=hudson
 artifactory.username=SECRET
